import { Controller } from "@nestjs/common";
import { MessagePattern } from "@nestjs/microservices";

import { User } from "./user.entity";
import { UserService } from "./user.service";

@Controller()
export class UserController {
  constructor(private readonly userService: UserService) {}

  @MessagePattern({ cmd: "get_all_users" })
  async findAll(): Promise<User[]> {
    return this.userService.findAll();
  }
}
