export interface Parameter {
  id: number;
  name: string;
  value: string;
  userId: number;
}
