export interface Room {
  id: number;
  name: string;
  capacity: number;
  floor: number;
  state: number;
  location: string;
  buildingId: number;
}
