@startuml class_diagram

title Diagramme de Classes participantes

' ========================
'       ENTITES DOMAINES
' ========================
class User
class Building
class Room
class Equipment
class Reservation
class Request
class Parameter


' ========================
'       USER
' ========================
class UserController {
  + createUser()
  + updateUser()
  + deleteUser()
  + getUserById()
  + getAllUsers()
}

class UserService {
  + createUser()
  + updateUser()
  + deleteUser()
  + getUserById()
  + getAllUsers()
}

class UserRepository {
  + save()
  + deleteById()
  + findById()
  + findAll()
}

UserController --> UserService
UserService --> UserRepository
UserService --> User
UserRepository --> User


' ========================
'       BUILDING
' ========================
class BuildingController {
  + createBuilding()
  + updateBuilding()
  + deleteBuilding()
  + getBuildingById()
  + getAllBuildings()
}

class BuildingService {
  + createBuilding()
  + updateBuilding()
  + deleteBuilding()
  + getBuildingById()
  + getAllBuildings()
}

class BuildingRepository {
  + save()
  + deleteById()
  + findById()
  + findAll()
}

BuildingController --> BuildingService
BuildingService --> BuildingRepository
BuildingService --> Building
BuildingRepository --> Building


' ========================
'       ROOM
' ========================
class RoomController {
  + createRoom()
  + updateRoom()
  + deactivateRoom()
  + getRoomById()
  + getRoomsByBuilding()
}

class RoomService {
  + createRoom()
  + updateRoom()
  + deactivateRoom()
  + getRoomById()
  + getRoomsByBuilding()
}

class RoomRepository {
  + save()
  + deleteById()
  + findById()
  + findByBuildingId()
}

RoomController --> RoomService
RoomService --> RoomRepository
RoomService --> Room
RoomRepository --> Room

Building --> Room : contains >


' ========================
'       EQUIPMENT
' ========================
class EquipmentController {
  + createEquipment()
  + updateEquipment()
  + deleteEquipment()
  + getEquipmentById()
  + getAllEquipment()
}

class EquipmentService {
  + createEquipment()
  + updateEquipment()
  + deleteEquipment()
  + getEquipmentById()
  + getAllEquipment()
}

class EquipmentRepository {
  + save()
  + deleteById()
  + findById()
  + findAll()
}

EquipmentController --> EquipmentService
EquipmentService --> EquipmentRepository
EquipmentService --> Equipment
EquipmentRepository --> Equipment

Room --> Equipment : possesses >


' ========================
'       RESERVATION
' ========================
class ReservationController {
  + createReservation()
  + updateReservation()
  + cancelReservation()
  + getReservationById()
  + getReservationsByUser()
}

class ReservationService {
  + createReservation()
  + updateReservation()
  + cancelReservation()
  + getReservationById()
  + getReservationsByUser()
  + checkAvailability()
}

class ReservationRepository {
  + save()
  + deleteById()
  + findById()
  + findByUserId()
}

ReservationController --> ReservationService
ReservationService --> ReservationRepository
ReservationService --> Reservation
ReservationRepository --> Reservation

User --> Reservation : makes >
Room --> Reservation : "reserved in" >


' ========================
'       SUPPORT REQUEST
' ========================
class RequestController {
  + createRequest()
  + closeRequest()
  + getRequestById()
  + getRequestsByUser()
}

class RequestService {
  + createRequest()
  + closeRequest()
  + getRequestById()
  + getRequestsByUser()
}

class RequestRepository {
  + save()
  + findById()
  + findByUserId()
}

RequestController --> RequestService
RequestService --> RequestRepository
RequestService --> Request
RequestRepository --> Request

User --> Request : creates >


' ========================
'       PARAMETERS
' ========================
class ParameterController {
  + updateParameter()
  + getParameter()
  + getAllParameters()
}

class ParameterService {
  + updateParameter()
  + getParameter()
  + getAllParameters()
}

class ParameterRepository {
  + save()
  + findByName()
  + findAll()
}

ParameterController --> ParameterService
ParameterService --> ParameterRepository
ParameterService --> Parameter
ParameterRepository --> Parameter

User --> Parameter : manages if admin >

@enduml